--- a/enonce_TP3_Inpainting.ipynb
+++ b/enonce_TP3_Inpainting.ipynb
@@ -18,11 +18,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "using Images, Plots, TestImages,Printf\n",
-    "using StatsBase"
+    "using StatsBase # Faire Pkg.add ImageIO si nécessaire"
    ]
   },
   {
@@ -59,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Solution de norme $\\ell^2$ minimale\n",
+    "## Solution de norme $\\ell^2$ minimale (pseudo-inverse de Moore-Penrose)\n",
     "\n",
     "On résout $$u_0 =\\mathrm{argmin}_u \\|u\\|_{\\ell^2} \\quad \\mbox{s.c.}\\quad Au=y$$"
    ]
@@ -240,15 +242,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.5.3",
+   "display_name": "Julia 1.3.1",
    "language": "julia",
-   "name": "julia-1.5"
+   "name": "julia-1.3"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.5.4"
+   "version": "1.3.1"
   }
  },
  "nbformat": 4,
