--- a/enonce_TP2_Choix du paramètre.ipynb
+++ b/enonce_TP2_Choix du paramètre.ipynb
@@ -214,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epsvec=[10, 1 ,1e-1] # A COMPLETER ET MODIFIER\n",
+    "epsvec=[10,5,3,2, 1]# ,1e-1] # A COMPLETER ET MODIFIER\n",
     "\n",
     "x_lambda,rho,eta = tikhonov(U1,S1,V1,bb1,epsvec,zeros(size(xex)))\n",
     "\n",
@@ -231,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epsvec=[10, 1 ,1e-1 ] # A COMPLETER ET MODIFIER\n",
+    "epsvec=[10,5,3,2, 1] # A COMPLETER ET MODIFIER\n",
     "\n",
     "x_lambda,rho,eta = tikhonov(U2,S2,V2,bb2,epsvec,zeros(size(xex)))\n",
     "\n",
