--- a/enonce_TP4_Deconvolution.ipynb
+++ b/enonce_TP4_Deconvolution.ipynb
@@ -52,7 +52,7 @@
    "source": [
     "## I. Convolution\n",
     "On étudie l'opérateur de convolution périodique $A\\colon L^2([0,1]^2) \\rightarrow L^2([0,1]^2)$ défini par \n",
-    " $$\\forall x \\in [0,1]^2, \\quad Au(x)=\\int_{[0,1]^2}h(x-s)f(s)\\mathrm{d} s, $$\n",
+    " $$\\forall x \\in [0,1]^2, \\quad Au(x)=\\int_{[0,1]^2}h(x-s)u(s)\\mathrm{d} s, $$\n",
     "où $h \\in L^2([0,1]^2)$ est le noyau de convolution (étendu par 1-périodicité), aussi appelé fonction d'étalement du point (*Point Spread Function*, PSF) ou réponse impulsionnelle."
    ]
   },
@@ -392,15 +392,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.5.3",
+   "display_name": "Julia 1.3.1",
    "language": "julia",
-   "name": "julia-1.5"
+   "name": "julia-1.3"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.5.4"
+   "version": "1.3.1"
   }
  },
  "nbformat": 4,
