Code à completer TP1

--- a/enonce_TP1_Résolution de systèmes.ipynb
+++ b/enonce_TP1_Résolution de systèmes.ipynb
@@ -97,8 +97,8 @@
     "xlu=solve_LU(B,A'*y)\n",
     "xchol=solve_chol(B,A'*y)\n",
     "# Pour mesurer le temps\n",
-    "# @time xlu=solve_LU(B,z)\n",
-    "# @time xchol=solve_chol(B,z)\n",
+    "#@time xlu=solve_LU(B,A'*y)\n",
+    "#@time xchol=solve_chol(B,A'*y)\n",
     "\n",
     "\n",
     "print(\"Erreur avec la décomposition LU: \")\n",
@@ -154,8 +154,8 @@
     "x=randn(n) # notre inconnue (la vraie solution)\n",
     "y=A*x\n",
     "# factorisation QR\n",
-    "Q,R=qr(A);\n",
-    "xqr=R\\(Q[:,1:n]'*y)\n",
+    "Q,R=qr(A);  \n",
+    "#  xqr=   # COMPLETER\n",
     "print(\"Erreur avec la décomposition QR: \")\n",
     "println(norm(xqr-x)/norm(x))"
    ]
@@ -300,15 +300,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.3.1",
+   "display_name": "Julia 1.7.2",
    "language": "julia",
-   "name": "julia-1.3"
+   "name": "julia-1.7"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.3.1"
+   "version": "1.7.2"
   }
  },
  "nbformat": 4,
